# AUI.Installer

./: CMakeLists.txt  README.md
src/: InstallerModel.h  Style.cpp  main.cpp
src/Page/: IPage.h  InstallDirPage.cpp  InstallDirPage.h  InstallingPage.cpp  InstallingPage.h  LicensePage.cpp  LicensePage.h  WelcomePage.cpp  WelcomePage.h
src/User/: InstallerModel.h  ProjectConfig.cpp  ProjectConfig.h
src/Window/: MainWindow.cpp  MainWindow.h
