cmake_minimum_required(VERSION 3.10)

project(installer)


if (NOT TARGET AUI.Views)
    find_package(AUI REQUIRED)
endif()

if(WIN32)
    if (NOT AUI_INSTALLER_TARGET)
        message(FATAL_ERROR "Please set AUI_INSTALLER_TARGET to specify the target you want specify to install.")
    endif()
    if (NOT CPACK_PACKAGE_NAME)
        set(CPACK_PACKAGE_NAME CPACK_PACKAGE_NAME)
    endif()
    if (NOT CPACK_PACKAGE_INSTALL_DIRECTORY)
        set(CPACK_PACKAGE_INSTALL_DIRECTORY "${CPACK_PACKAGE_NAME}")
    endif()
    if (TARGET AUI.Views)
        AUI_Executable(installer)
        AUI_Compile_Assets(installer)
        target_link_libraries(installer PRIVATE AUI.Core)
        target_link_libraries(installer PRIVATE AUI.Data)
        target_link_libraries(installer PRIVATE AUI.Views)
        target_link_libraries(installer PRIVATE AUI.Crypt)
        target_compile_definitions(installer PRIVATE CPACK_PACKAGE_NAME=\"${CPACK_PACKAGE_NAME}\")
        target_compile_definitions(installer PRIVATE CPACK_PACKAGE_INSTALL_DIRECTORY="C:/Program Files/${CPACK_PACKAGE_INSTALL_DIRECTORY}")
        if (CPACK_RESOURCE_FILE_LICENSE)
            target_compile_definitions(installer PRIVATE CPACK_RESOURCE_FILE_LICENSE=1)
            AUI_Compile_Assets_Add(installer ${CPACK_RESOURCE_FILE_LICENSE} "license/en.txt")
        endif()
    endif()
else()
    message("Not building installer because it is WIN32 only.")
endif()